--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,21 +28,22 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  analyzer: ^6.2.0
   cupertino_icons: ^1.0.2
+  dio: ^5.4.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.8
+ # json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
+  retrofit: ^4.0.3
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  build_runner: ^2.4.7
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^8.0.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,12 +66,12 @@ flutter:
     - assets/images/solid_circle_ic.svg
     - assets/images/left_arrow_ic.svg
     - assets/images/right_arrow_ic.svg
-  #  - assets/images/photo-camera.svg
+    #  - assets/images/photo-camera.svg
     - assets/images/change_lang_ic.svg
     - assets/images/contact_us_ic.svg
     - assets/images/invite_friends_ic.svg
     - assets/images/logout_ic.svg
-   # - assets/images/right_arrow_settings_ic.svg
+    # - assets/images/right_arrow_settings_ic.svg
     - assets/json/loading.json
     - assets/json/error.json
     - assets/json/empty.json
