--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,11 @@ environment:
 dependencies:
   analyzer: ^6.2.0
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^5.4.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.8
- # json_annotation: ^4.8.1
   json_serializable: ^6.7.1
   retrofit: ^4.0.3
 
