--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.8
+  internet_connection_checker: ^1.0.0+1
   json_serializable: ^6.7.1
   retrofit: ^4.0.3
 
