--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.0.8
   internet_connection_checker: ^1.0.0+1
   json_serializable: ^6.7.1
+  pretty_dio_logger: ^1.3.1
   retrofit: ^4.0.3
 
 dev_dependencies:
