--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   json_serializable: ^6.7.1
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.0.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   build_runner: ^2.4.7
