--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.8
+  freezed: ^2.4.6
   internet_connection_checker: ^1.0.0+1
+  json_annotation: ^4.8.1
   json_serializable: ^6.7.1
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.0.3
