--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.8
   freezed: ^2.4.6
+  gap: ^3.0.1
   internet_connection_checker: ^1.0.0+1
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
