--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
+  lottie: ^2.7.0
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.0.3
   shared_preferences: ^2.2.2
